--- a/manifest.plist
+++ b/manifest.plist
@@ -11,7 +11,7 @@
                     <key>kind</key>
                     <string>software-package</string>
                     <key>url</key>
-                    <string>https://p6li0r9ss.bkt.clouddn.com/t66y_ios-resigned.ipa</string>
+                    <string>http://taoquan88.vip/res/app/t66y_ios-resigned.ipa</string>
                 </dict>
             </array>
             <key>metadata</key>
